# Sweety

./: .gitignore  README.md  config.example.json
app/catalog/: base_personas.json
app/desktop/: Sweety.spec  build_app.sh  launcher.py  pyproject.toml
app/desktop/src/sweety_app/: __init__.py  __main__.py  about.py  ai.py  api.py  catalog.py  catalog_personas.py  config.py  database.py  line_mac.py  metrics_reporter.py  monitor.py  panel.py  permissions.py  persona_safety.py  region_access.py  remote_catalog.py  repositories.py  runtime.py  schemas.py  updates.py
app/desktop/tests/: test_about.py  test_ai.py  test_api.py  test_config.py  test_database_migrations.py  test_line_mac.py  test_metrics_integration_contract.py  test_metrics_reporter.py  test_monitor.py  test_panel_bridge.py  test_permissions.py  test_persona_safety.py  test_prompt_contract.py  test_region_access.py  test_release_version.py  test_remote_catalog.py  test_repositories.py  test_runtime.py  test_updates.py
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/tools/: apply_base_catalog.php  base_catalog.sql  base_personas.generated.sql  catalog_remote_runner.template.php  deploy_base_catalog.php  deploy_homepage.php  generate_persona_catalogs.py  metrics_remote_runner.template.php  prepare_persona_images.py  sweety_metrics.sql  synology_ssh.exp  (+1 more)
web/: about_sweety.html  homepage.css  homepage.js  index.html  llms.txt  mysql.example.php  robots.txt  sitemap.xml  sweety-catalog-lib.php  sweety-catalog.php  sweety-metrics-lib.php  sweety-metrics.php  sweety-update.json
(+40 files in other folders)
