[project]
name = "sweety-app"
version = "1.0.1"
description = "Sweety macOS anti-scam desktop runtime"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "requests>=2.32.0",
  "pydantic>=2.11.0",
]

[project.optional-dependencies]
desktop = [
  "mss>=10.0.0",
  "Pillow>=11.0.0",
  "numpy>=2.2.0",
  "pyautogui>=0.9.54",
  "rapidocr-onnxruntime>=1.4.4",
  "pyobjc-framework-Quartz>=11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Cocoa>=11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ApplicationServices>=11.0; sys_platform == 'darwin'",
  "pyperclip>=1.9.0",
]
dev = [
  "httpx>=0.28.0",
  "pyinstaller>=6.15.0",
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sweety_app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
